2012-12-07  Levi Weintraub  <leviw@chromium.org>

        Add support for tracking hit test rectangles to enable fast event rejection in the compositor
        https://bugs.webkit.org/show_bug.cgi?id=103914

        Reviewed by Simon Fraser.

        Enabling touch event target region tracking.

        * features.gypi:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::requestTouchEventType):
        (WebKit::WebPluginContainerImpl::~WebPluginContainerImpl):

2012-12-12  Andy Estes  <aestes@apple.com>

        Fix the Chromium build after r137539.

        * src/ScrollbarGroup.cpp:
        (WebKit::ScrollbarGroup::lastKnownMousePosition): Renamed from currentMousePosition().
        * src/ScrollbarGroup.h: Ditto.

2012-12-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-12-12  Charlie Reis  <creis@chromium.org>

        [chromium] Expose quickRedirectComing via WebDataSource
        https://bugs.webkit.org/show_bug.cgi?id=104586

        Reviewed by Nate Chapin.

        Exposes whether the current navigation is a client redirect, and
        thus should replace the current history item.

        * public/WebDataSource.h:
        (WebDataSource): Adds isClientRedirect.
        * src/WebDataSourceImpl.cpp:
        (WebKit::WebDataSourceImpl::isClientRedirect):
        (WebKit):
        * src/WebDataSourceImpl.h:
        (WebDataSourceImpl):

2012-12-12  Mark Lam  <mark.lam@apple.com>

        Encapsulate externally used webdatabase APIs in DatabaseManager.
        https://bugs.webkit.org/show_bug.cgi?id=104741.

        Reviewed by Sam Weinig.

        Use DatabaseManager instead of accessing DatabaseTracker, AbstractDatabase,
        and DatabaseContext directly. This is to prepare for upcoming webkit2
        refactoring.

        * src/ChromeClientImpl.cpp:
        * src/WebDatabase.cpp:
        (WebKit::WebDatabase::closeDatabaseImmediately):