@@ -198,6 +198,12 @@ WebCompositorInputHandlerImpl::EventDisposition WebCompositorInputHandlerImpl::h
     } else if (event.type == WebInputEvent::GestureFlingCancel) {
         if (cancelCurrentFling())
             return DidHandle;
+#if ENABLE(TOUCH_EVENT_TRACKING)
+    } else if (event.type == WebInputEvent::TouchStart) {
+        const WebTouchEvent& touchEvent = *static_cast<const WebTouchEvent*>(&event);
+        if (!m_inputHandlerClient->haveTouchEventHandlersAt(touchEvent.touches[0].position))
+            return DropEvent;
+#endif
     } else if (WebInputEvent::isKeyboardEventType(event.type)) {
          cancelCurrentFling();
     }
