@@ -1,3 +1,13 @@
+2012-12-13  Yusuf Ozuysal  <yusufo@google.com>
+
+        Check whether a touchDown lands on a registered touch event handler from the compositor
+        https://bugs.webkit.org/show_bug.cgi?id=104863
+
+        Reviewed by James Robinson.
+
+        * src/WebCompositorInputHandlerImpl.cpp:
+        (WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):
+
 2012-12-07  Levi Weintraub  <leviw@chromium.org>
 
         Add support for tracking hit test rectangles to enable fast event rejection in the compositor
